@@ -1,6 +1,7 @@
 xfburn 0.x
 ==========
 
+- Prevent having two 'New directory' entries in a data composition
 - Add support of SAO mode (bug #2121)
 - Add create directory action in data composition
 - Prevent usage of empty filename in data composition
